--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.17",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -34,6 +37,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
-    "jest": "^27.0.5"
+    "jest": "^27.0.5",
+    "vue-cli-plugin-tailwind": "^3.0.0"
   }
 }
