--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.6.2",
     "autoprefixer": "^10.4.7",
     "core-js": "^3.8.3",
     "pinia": "^2.0.17",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
+    "vee-validate": "^4.6.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
