--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vee-validate/rules": "^4.6.2",
     "autoprefixer": "^10.4.7",
     "core-js": "^3.8.3",
+    "firebase": "^9.9.1",
     "pinia": "^2.0.17",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
