--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.7",
     "core-js": "^3.8.3",
     "firebase": "^9.9.1",
+    "howler": "^2.2.3",
     "pinia": "^2.0.17",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
